# odd-collector-sdk

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: create_pypi_package.yaml
odd_collector_sdk/: __version__.py  collector.py  errors.py  job.py  logger.py  shutdown.py
odd_collector_sdk/api/: datasource_api.py  http_client.py
odd_collector_sdk/domain/: adapter.py  adapters_initializer.py  collector_config.py  collector_config_loader.py  filter.py  plugin.py  register_datasource_request.py
odd_collector_sdk/grammar_parser/: build_dataset_field.py  field_types.py  parser.py
odd_collector_sdk/types/: __init__.py
odd_collector_sdk/utils/: json_encoder.py  metadata.py  print_version.py
tests/: collector_config.yaml  test_module_importer.py  test_odd_collector.py
tests/adapters/glue/: adapter.py
tests/adapters/glue/sub_pkg/: sub_module.py
tests/adapters/s3/: adapter.py
tests/domain/: test_filter.py
tests/plugins/: plugins.py
tests/utils/: metadata.py  test_metadata.py
