[tool.poetry]
name = "odd-collector-sdk"
version = "0.1.3"
description = "ODD Collector"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opendatadiscovery/odd-collector-sdk"
repository = "https://github.com/opendatadiscovery/odd-collector-sdk"
keywords = ["odd-collector-sdk", "odd_collector_sdk", "opendatadiscovery"]
include = ["LICENSE"]
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>", "Pavel Makarichev <pmakarishev@provectus.com>"]

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "^3.8.1"
odd-models = "^1.0.14"
pydantic = "^1.8.2"
black = "^21.12b0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
