[tool.poetry]
name = "odd-collector-sdk"
version = "0.3.19"
description = "ODD Collector"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opendatadiscovery/odd-collector-sdk"
repository = "https://github.com/opendatadiscovery/odd-collector-sdk"
keywords = ["odd-collector-sdk", "odd_collector_sdk", "opendatadiscovery"]
include = ["LICENSE"]
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>", "Pavel Makarichev <pmakarichev@provectus.com>"]

[tool.poetry.dependencies]
python = "^3.9"
APScheduler = "^3.8.1"
pydantic = "^1.8.2"
aiohttp = "^3.8.1"
pyaml-env = "^1.1.5"
odd-models = "^2.0.21"
importlib-metadata = "^5.1.0"
tqdm = "^4.64.1"
funcy = "^1.17"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
